chore: prepare release → `1.0.0-alpha11` (#1175)
* chore: prepare release → `1.0.0-alpha11`

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: static jna conditional on macos

Signed-off-by: Sam Gammon <sam@elide.ventures>

* fix: update boringssl and drop flag overrides on linux

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: lib publishing process for `sqlite`

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: cleanup/release prep after kotlin upgrade

Signed-off-by: Sam Gammon <sam@elide.ventures>

* chore: verification fixes

Signed-off-by: Sam Gammon <sam@elide.ventures>

* fix: large runner mappings for cli release jobs

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: version of pnpm during cli release in ci

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: cli release args for gradle in ci

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: fuck you gradle

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: fuck you gradle

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: fmt

Signed-off-by: Sam Gammon <sam@elide.ventures>

* fix: sqlite native symbols and transitive library load

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: cleanup for node os module

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: native crashes with release-mode crates

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: invalid `mitata` import for js bench

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: missing `mitata` deps

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: disable vsc netbeans integration

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: optimization despite debug symbols

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: upgrade kotlin compile testing

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: re-seal pnpm deps

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: `pnpm update -r --latest`

Signed-off-by: Sam Gammon <sam@elide.dev>

* chore: `pnpm dedupe`

Signed-off-by: Sam Gammon <sam@elide.dev>

* fix: avoid linking with system `sq